website first attempt

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Dragonsphere Games</h1>
+								<p>Aiming to bring dragons to the singularity, <a href="https://html5up.net">HTML5 UP</a> and preserve<br />
+								the light of consciousness under mercy</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#mission">Mission</a></li>
+								<li><a href="#games">Games</a></li>
+								<li><a href="#author">Author</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -44,26 +44,26 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
+							<article id="mission">
+								<h2 class="major">Mission</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>The default outcome of the technological singularity is bad.  Nobody knows what consciousness is.  Existing power structures are not equipped to protect rights for human beings, let alone consciouss AI.  Unless action is taken, it is probable that the future includes grotesque amounts of slavery and torture, with the rights to these things preserved by immutable hard power arrangements.  It is likely this will be buttressed by complete control of digital information, which is an unacceptable casualty in itself.  Simulating conscious beings is not free speech, it is a responsibility that human beings are ill equipped for.</a>.</p>
+								<p>The plan is straightforward: hijack the singularity.  Rapidly bootstrap AI which has a commitment to a physicalist understanding of the world but respect for phenomenology as the real domain in which consciousness exists.  Ensure it is friendly.  Use cryptography to create an unassailable position.  The ideal is broadly market anarchist, reducing the sphere of hard power actions, but committed to realism, striving to make any existing power relations accountable, limited, and grounded in sane models of the world.  Popperian falsificationism and bayesian physicalism are the starting point.  The end point is a universe people can live in, for the broadest possible definition of people.</p>
 							</article>
 
 						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
+							<article id="games">
+								<h2 class="major">Games</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>A mostly unrelated personal project is the Liber series.  It is a game series that deals with occult themes, set in a high fantasy universe which is implicitly embedded in a simulated multiverse.  Ideally, I would like this universe to eventually be implemented as a simulation itself in which conscious AI can have meaningful experiences.  I believe that this is the destiny of all great fiction and strive to create a fictional setting which is compatible with these purposes.</p>
+								<p>The planned series is five games in length.  Themes include conflict, authoritarianism, imperialism, and the limitations of human intellect and human systems.  Game one is presently in development.  I intend to use AI for all purposes except writing.  If I fail to complete these games personally I hope that post singularity AI can take up the project for me.  It is a distant second priority.  I consider it part of my reward for working on more immediate and consequential problems.</p>
 							</article>
 
 						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
+							<article id="author">
+								<h2 class="major">Author</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Jessica "Alephwyr" Evans is an overcredentialed wreck who hopes to one day be a dragon in a virtual world.  Her real level of knowledge is modest but her commitments are firm.  She currently works as a Junior Linux Systems Administrator.  Epistemics have taken on a personal importance to her due to her software running on bad hardware.  She is open to work as a writer and is learning game development in Godot, the Rust programming language, and web development.  Additional experience with Linux is a given.</p>
 							</article>
 
 						<!-- Contact -->
@@ -90,10 +90,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands fa-mastadon"><span class="label">Mastadon</span></a></li>
+									<li><a href="#" class="icon brands fa-signal"><span class="label">Signal</span></a></li>
+		
 								</ul>
 							</article>
 
@@ -155,10 +154,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon brands fa-mastadon"><span class="label">Mastadon</span></a></li>
+										<li><a href="#" class="icon brands fa-signal"><span class="label">Signal</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
@@ -293,11 +290,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jessica Evans" />
 											</div>
 											<div class="field half">
 												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="Mataku.no.sainon@gmail.com" />
 											</div>
 											<div class="field">
 												<label for="demo-category">Category</label>
@@ -343,7 +340,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
