--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Dragonsphere Games</h1>
-								<p>Aiming to bring dragons to the singularity, <a href="https://html5up.net">HTML5 UP</a> and preserve<br />
+								<p>Aiming to bring dragons to the singularity,  and preserve<br />
 								the light of consciousness under mercy</p>
 							</div>
 						</div>
